src/simplex/primal/snapshots/tsuno__simplex__primal__tests__revised_simplex_solve_returns_iteration_limit_solution.snap
---
source: src/simplex/revised_simplex/tests.rs
expression: trace
---
iteration 0
basis before: [2, 3]
outcome: pivoted
entering column: 1 (reduced_cost: -2)
leaving column: 3 (step_length: 3)
direction: [0, 1]
basis after: [2, 1]
